css/styles.css
* {
    box-sizing: border-box;
}

body {
    background-color: lightgrey;
    font-family: 'Bungee Inline', cursive;
    color: dimgray;
    text-align: center;
}

.header p {
    font-family: monospace;
    font-weight: bold;
    font-size: 18px;
    margin-bottom: 40px;
    color: black;
}

.header p a {
    color: black;
}

.header p a:hover {
    color: hotpink;
}

h1 {
    font-family: 'Bungee Shade', cursive;
    margin-bottom: 50px;
    color: black;
}

h2 {
    text-align: center;
}

.container {
    background-color: white;
    display: flex;
    justify-content: center;
    max-width: 300px;
    padding: 20px;
    margin: 0 auto;
}

.squares {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 1080px;
    align-items: center;
}

.square {
    width: 250px;
    height: 250px;
    box-shadow: 5px 5px 10px darkgrey;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 10px;
}

@media (min-width: 600px) {
    .container {
        max-width: 580px;
    }
    h1 {
        font-size: 80px;
    }
}

@media (min-width: 900px) {
    .container {
        max-width: 850px;
    }
    h1 {
        font-size: 80px;
    }
}

@media (min-width: 1200px) {
    .container {
        max-width: 1120px;
    }
    h1 {
        font-size: 80px;
    }
}

